First lab header and navi overflow fix: removed both vertical and horizontal sliders

--- a/lab1/assets/css/style.css
+++ b/lab1/assets/css/style.css
@@ -18,7 +18,7 @@ body {
 .intro__header {
     background-image: linear-gradient(to left, rgb(165, 246, 255), #fff); 
     width: 100%;
-    height: 100px;
+    min-height: 100px;
     padding: 5px;
 
     display: flex;
@@ -26,6 +26,7 @@ body {
     justify-content: space-around;
     align-items: center;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 .title {
     margin: 0;
@@ -36,7 +37,6 @@ body {
     border: 5px solid rgb(255, 62, 200);
     background-color: #fff;
 
-    max-width: 50%;
     max-height: 80%;
 
     /*overflow: auto;*/
